Fixed media query size to 840 breakpoint so header menu would not overflow in some sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ footer {
 }
 /* Media Queries for phones up to 600px*/
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 840px) {
   /*  Header Area*/
 
     header {
@@ -370,7 +370,7 @@ footer {
 }
 
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 841px) {
 
     #dropdown-menu {
         visibility: hidden;
